fixed too long email

--- a/contacts.css
+++ b/contacts.css
@@ -114,6 +114,8 @@
 .max-mail-length {
   max-width: 200px;
   text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .single-contact-details span {
